# nameko-chassis

./: .bumpversion.cfg  .cookiecutterrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: build.yml
ci/: requirements.txt
ci/templates/: tox.ini
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/reference/: index.rst  nameko_chassis.rst
src/nameko_chassis/: __init__.py  containers.py  debug.py  dependencies.py  discovery.py  health.py  service.py
tests/: test_debug.py  test_discovery.py  test_health.py  test_nameko_chassis.py  test_service.py
